Fixed misaligned style for key/value field (fixes #1789)

--- a/platforms/common/css-compiled/g-admin.css
+++ b/platforms/common/css-compiled/g-admin.css
@@ -7166,6 +7166,7 @@ html.g5-dialog-open {
 }
 #g5-container .settings-block .g-keyvalue-field ul input.g-keyvalue-input-key {
   width: 50%;
+  display: inline-block;
   font-weight: bold;
   border-right: 0;
   border-top-right-radius: 0;
@@ -7173,6 +7174,7 @@ html.g5-dialog-open {
 }
 #g5-container .settings-block .g-keyvalue-field ul input.g-keyvalue-input-value {
   width: 50%;
+  display: inline-block;
   border-left: 0;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
